chore: remove upload from be
